--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8">~
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>One Page Site</title>
+    <title>HTML5 e CSS3 One Page Site</title>
+    <meta name="description" content="Aprenda HTML5, CSS3 e SEO de forma simples, prática e obejectiva desenvolvendo passo a passo do zero até a hospedagem um site one page moderno e responsivo">
+    <link rel="icon" href="img/favicon.png" type="image/png">
 </head>
 <body>
     
