--- a/index.html
+++ b/index.html
@@ -10,6 +10,39 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <!-- Cabeçalho -->
+
+    <header>
+
+    </header>
+    <!-- Destaque -->
+    <main>
+        <h1> HTML5 CSS3</h1>
+        <h2>Você aprenden fazendo</h2>
+    </main>
+    <!-- Sobre -->
+    <section>
+        <h2> A prática leva a perfeição
+        </h2>
+    </section>
+    <!-- One Page -->
+    <section>
+        <h2> One Page site</h2>
+    </section>
+    <!-- Wireframe -->
+    <section>
+        <h2> Wireframe</h2>
+    </section>
+    <!-- Conteúdo -->
+    <section>
+        <h2> Conteúdo</h2>
+        <h3> HTML5</h3>
+        <h3>BOX MODEL CSS</h3>
+        <h3>BREAKPOINT</h3>
+    </section>
+    <!-- Rodapé -->
+    <footer>
+
+    </footer>
 </body>
 </html>
