--- a/index.html
+++ b/index.html
@@ -13,36 +13,46 @@
     <!-- Cabeçalho -->
 
     <header>
-
+        <div class="Container"></div>
     </header>
     <!-- Destaque -->
     <main>
+        <div class="Container">
         <h1> HTML5 CSS3</h1>
         <h2>Você aprenden fazendo</h2>
+        </div>
     </main>
     <!-- Sobre -->
     <section>
-        <h2> A prática leva a perfeição
-        </h2>
+        <div class="Container">
+        <h2> A prática leva a perfeição</h2>
+        </div>
     </section>
     <!-- One Page -->
     <section>
+        <div class="Container">
         <h2> One Page site</h2>
+        </div>
     </section>
     <!-- Wireframe -->
     <section>
+        <div class="Container">
         <h2> Wireframe</h2>
+        </div>
     </section>
     <!-- Conteúdo -->
     <section>
+        <div class="Container">
         <h2> Conteúdo</h2>
         <h3> HTML5</h3>
         <h3>BOX MODEL CSS</h3>
         <h3>BREAKPOINT</h3>
+        </div>
+
     </section>
     <!-- Rodapé -->
     <footer>
-
+        <div class="Container"></div>
     </footer>
 </body>
 </html>
