--- a/index.html
+++ b/index.html
@@ -1,58 +1,82 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HTML5 e CSS3 One Page Site</title>
-    <meta name="description" content="Aprenda HTML5, CSS3 e SEO de forma simples, prática e obejectiva desenvolvendo passo a passo do zero até a hospedagem um site one page moderno e responsivo">
+    <meta name="description"
+        content="Aprenda HTML5, CSS3 e SEO de forma simples, prática e obejectiva desenvolvendo passo a passo do zero até a hospedagem um site one page moderno e responsivo">
     <link rel="icon" href="img/favicon.png" type="image/png">
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <!-- Cabeçalho -->
 
-    <header>
-        <div class="Container"></div>
+    <header id="inicio">
+        <div class="Container">
+            <div id="logo">
+                <img src="img/logo.png" alt="hal 9000" width="70px">
+
+            </div>
+            <div>
+                <nav>
+                    <input type="checkbox" id="check">
+                    <label for="check">&#x268c;</label>
+                    <ul>
+                        <li><a href="#inicio">Início</a></li>
+                        <li><a href="#sobre">Sobre</a></li>
+                        <li><a href="#conteudo">Contéudo</a></li>
+                        <li><a href="#contacto"">Contacto</a></li>
+                    </ul>
+
+                </nav>
+            </div>
+        </div>
     </header>
     <!-- Destaque -->
     <main>
         <div class="Container">
-        <h1> HTML5 CSS3</h1>
-        <h2>Você aprenden fazendo</h2>
+            <h1> HTML5 CSS3</h1>
+            <h2>Você aprenden fazendo</h2>
         </div>
     </main>
     <!-- Sobre -->
-    <section>
+    <section id="sobre">
         <div class="Container">
-        <h2> A prática leva a perfeição</h2>
+            <h2> A prática leva a perfeição</h2>
         </div>
     </section>
     <!-- One Page -->
     <section>
         <div class="Container">
-        <h2> One Page site</h2>
+            <h2> One Page site</h2>
         </div>
     </section>
     <!-- Wireframe -->
     <section>
         <div class="Container">
-        <h2> Wireframe</h2>
+            <h2> Wireframe</h2>
         </div>
     </section>
     <!-- Conteúdo -->
-    <section>
+    <section id="conteudo">
         <div class="Container">
-        <h2> Conteúdo</h2>
-        <h3> HTML5</h3>
-        <h3>BOX MODEL CSS</h3>
-        <h3>BREAKPOINT</h3>
+            <h2> Conteúdo</h2>
+            <h3> HTML5</h3>
+            <h3>BOX MODEL CSS</h3>
+            <h3>BREAKPOINT</h3>
         </div>
 
     </section>
     <!-- Rodapé -->
-    <footer>
+    <footer id="contacto">
         <div class="Container"></div>
     </footer>
+
+    <a href="#inicio" id="topo"><img src="img/topo.png" alt="topo do site>"</a>
 </body>
+
 </html>
