--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <header id="inicio">
         <div class="Container Flex">
             <div id="logo">
-                <img src="img/logo.png" alt="hal 9000" width="70px">
+                <img src="img/logo.png" alt="hal 9000">
 
             </div>
             <div>
@@ -76,7 +76,7 @@
         <div class="Container"></div>
     </footer>
 
-    <a href="#inicio" id="topo"><img src="img/topo.png" alt="topo do site>"</a>
+    <a href="#inicio" id="topo"><img src="img/topo.png" alt="topo do site"></a>
 </body>
 
 </html>
