--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                         <li><a href="#inicio">Início</a></li>
                         <li><a href="#sobre">Sobre</a></li>
                         <li><a href="#conteudo">Contéudo</a></li>
-                        <li><a href="#contacto"">Contacto</a></li>
+                        <li><a href="#contacto">Contacto</a></li>
                     </ul>
 
                 </nav>
